[project]
name = "lstm-vs-transformer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "datasets>=5.0.0",
    "huggingface-hub>=1.22.0",
    "hydra-core>=1.3.2",
    "networkx>=2.8.8",
    "numpy>=2.5.0",
    "pydantic>=2.13.4",
    "scipy>=1.18.0",
    "torch>=2.11,<2.13",
    "tqdm>=4.68.3",
    "wandb>=0.28.0",
]

[project.optional-dependencies]
concorde = ["pyconcorde @ git+https://github.com/jvkersch/pyconcorde"]
gurobi = ["gurobipy>=13.0.2"]
solvers = [
    "gurobipy>=13.0.2",
    "pyconcorde @ git+https://github.com/jvkersch/pyconcorde",
]

[dependency-groups]
dev = ["ruff>=0.15.20", "ty>=0.0.55"]

[tool.uv.sources]
torch = [{ index = "pytorch-cu128", marker = "sys_platform == 'linux'" }]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
